Empezando el header del home.html y home-style.css

--- a/appWeb/views/home.html
+++ b/appWeb/views/home.html
@@ -7,27 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Escondida</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/home-styles.css">
 </head>
 
 <body>
     <header>
-        <div>
+        <div class="cart">
             <i class="fas fa-shopping-cart"></i>
         </div>
 
-        <div>
+        <div class="logo">
             <!--IMAGEN DEL LOGO-->
             <img src="" alt="Logo La Escondida">
         </div>
 
-        <div>
+        <div class="user">
             <i class="fas fa-user"></i>
         </div>
 
-        <form action="/" method="POST">
+        <form action="/" method="POST" class="search">
         <input type="search" name="buscador" placeholder="Buscar Productos...">
         <i class="fas fa-search"></i>
         </form>
     </header>
+
+    <section class ="container">
+        
+        <ul class="slider">
+
+            <li>
+                <img src="" alt="">
+            </li>
+      
+            <li>
+                <img src="" alt="">
+            </li>
+
+            <li>
+                <img src="" alt="">
+            </li>
+        </ul>
+    </section>
 </body>
