--- a/appWeb/views/home.html
+++ b/appWeb/views/home.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Escondida</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/home-styles.css">
 </head>
 
@@ -19,27 +18,31 @@
 
         <div class="logo">
             <!--IMAGEN DEL LOGO-->
-            <img src="" alt="Logo La Escondida">
+            <img src="/images/laEscondida-logo.png" alt="Logo La Escondida">
         </div>
 
         <div class="user">
             <i class="fas fa-user"></i>
+            <ul>
+            <li><a href="/register">Registrarse</a></li>
+            <li><a href="/login">Login</a></li>
+            </ul>
         </div>
 
         <form action="/" method="POST" class="search">
-        <input type="search" name="buscador" placeholder="Buscar Productos...">
-        <i class="fas fa-search"></i>
+            <input type="search" name="buscador" placeholder="Buscar Productos...">
+            <i class="fas fa-search"></i>
         </form>
     </header>
 
-    <section class ="container">
-        
+    <section class="container">
+
         <ul class="slider">
 
             <li>
                 <img src="" alt="">
             </li>
-      
+
             <li>
                 <img src="" alt="">
             </li>
@@ -49,4 +52,59 @@
             </li>
         </ul>
     </section>
+
+    <nav>
+
+    </nav>
+
+    <footer>
+        <div class="footer-shop">
+            <h4>Tienda</h4>
+            <ul>
+                <li><a href="/productDetail">Cerveza</a></li>
+                <li><a href="/productDetail">Vinos</a></li>
+                <li><a href="/productDetail">Otras Bebidas</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-laEscondida">
+            <h4>La Escondida</h4>
+            <ul>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Sobre nosotros</a></li>
+            </ul>
+        </div>
+
+        <form action="/" method="POST" class="footer-email">
+            <input type="email" name="email" placeholder="Dejanos tu email...">
+            <i class="far fa-envelope"></i>
+        </form>
+
+        <div class="footer-redesSociales">
+            <img src="/images/facebook.png" alt="Facebook">
+            <img src="/images/instagram.png" alt="Instagram">
+            <img src="/images/whatsapp.png" alt="whatsapp">
+        </div>
+
+        <section class="footer-metodosDePago">
+            <h4>Metodos de pago</h4>
+
+            <article>
+                <i class="fas fa-credit-card icon-footer"></i>
+                <h3>Paga con tarjeta o efectivo</h3>
+                <p class="parrafo-footer">En La Escondida, tenés cuotas sin interés con tarjeta o efectivo en
+                    forma de pago. ¡Y siempre es seguro!
+                </p>
+            </article>
+            <article>
+                <i class="fas fa-gift icon-footer"></i>
+                <h3>Envío gratis desde $ 2.500</h3>
+                <p class="parrafo-footer">
+                    Solo por estar registrad@ en La Escondida tenés envíos gratis en miles de
+                    productos.
+                </p>
+            </article>
+        </section>
+
+    </footer>
 </body>
