intento de carrousel

--- a/appWeb/views/home.html
+++ b/appWeb/views/home.html
@@ -24,8 +24,8 @@
         <div class="user">
             <i class="fas fa-user"></i>
             <ul>
-            <li><a href="/register">Registrarse</a></li>
-            <li><a href="/login">Login</a></li>
+                <li><a href="/register">Registrarse</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
 
@@ -38,19 +38,29 @@
     <section class="container">
 
         <ul class="slider">
-
-            <li>
-                <img src="" alt="">
+            <li id="slide1">
+                <img src="/images/cervezas-varias.jpg" alt="Cervezas varias"/>
             </li>
-
-            <li>
-                <img src="" alt="">
+            <li id="slide2">
+                <img src="/images/tipos-de-vinos-tintos.jpg" alt="Vinos varios" />
             </li>
-
-            <li>
-                <img src="" alt="">
+            <li id="slide3">
+                <img src="/images/bebidas-destiladas.png" alt="Bebidas Destiladas varias" />
             </li>
         </ul>
+
+        <ul class="menu">
+            <li>
+                <a href="#slide1">1</a>
+            </li>
+            <li>
+                <a href="#slide2">2</a>
+            </li>
+            <li>
+                <a href="#slide3">3</a>
+            </li>
+        </ul>
+
     </section>
 
     <nav>
