--- a/appWeb/public/css/home-styles.css
+++ b/appWeb/public/css/home-styles.css
@@ -89,13 +89,66 @@ form.search input{
 }
 
 .container{
-    display: none;
+   display: none;
 }
-
+  
 ul, li {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+}
+  
+ul.slider{
+    position: relative;
+    width: 800px;
+    height: 300px;
+}
+  
+ul.slider li {
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      opacity: 0;
+      width: inherit;
+      height: inherit;
+      transition: opacity .5s;
+      background:#fff;
+}
+  
+ul.slider li img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+  
+ul.slider li:first-child {
+      opacity: 1; 
+}
+  
+ul.slider li:target {
+      opacity: 1; 
+}
+  
+.menu{
+    text-align: center;
+    margin: 20px;
+}
+  
+menu li{
+    display: inline-block;
+    text-align: center;
+}
+  
+.menu li a{
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+    background-color: grey;
+    padding: 10px;
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    border-radius: 100%;
 }
 
 footer{
@@ -165,11 +218,17 @@ footer div.footer-redesSociales img{
     }
 
     .container{
-        display: flex;
+        display: block;
         margin: auto;
-        width: 90%;
+        background-color: white;
+        width: 800px;
+        padding: 30px;
+    }
+
+    ul.slider{
+        position: relative;
+        width: 800px;
         height: 300px;
-        background-color: #ffffff;
     }
 
     footer{
