--- a/appWeb/public/css/home-styles.css
+++ b/appWeb/public/css/home-styles.css
@@ -191,6 +191,50 @@ footer div.footer-redesSociales img{
     object-fit: contain;
 }
 
+h4{
+    font-family: sans-serif;
+    font-size: 24px;
+    text-align: center;
+
+}
+.formregister, .formlogin{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Roboto';
+    padding: 60px;
+}
+
+.formregister label{
+width: 79%;
+padding: 20px 0px 10px 0px;
+font-weight: bold;
+
+}
+
+.formlogin input, .formlogin button, .formregister input, .formregister button{
+    width: 80%;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.formregister div{
+    align-self: center;
+}
+
+.formregister div input, label{
+    align-self: center;
+    width: 4vw;
+
+}
+
+.formlogin button, .formregister button{
+    color: white;
+    background-color:#293771;
+}
+
 @media (min-width: 550px){
     div.cart{
         flex-direction:row;
