--- a/appWeb/public/css/home-styles.css
+++ b/appWeb/public/css/home-styles.css
@@ -23,11 +23,17 @@ div.cart{
     width: 20%;
     flex-direction:row;
     justify-content: flex-start;
+    transition: all 05s;
 }
 
 .fa-shopping-cart{
     color: #ffffff;
     font-size: 25px;
+    
+}
+
+div.cart :hover{
+   color: #000000;
 }
 
 div.logo{
@@ -95,6 +101,7 @@ form.search input{
 	width: 95%;
 	margin: auto;
 	overflow: hidden;
+    border-radius: 5px;
 }
 
 .slider ul {
@@ -107,11 +114,13 @@ form.search input{
 
 .slider li {
 	width: 100%;
+    height: 60%;
 	list-style: none;
 }
 
 .slider img {
 	width: 100%;
+    object-fit: contain;
 }
 
 @keyframes cambio {
@@ -131,6 +140,7 @@ form.search input{
 section{
    width: 95%;
    padding: 10px;
+   
 }
 
 section ul{
@@ -140,11 +150,18 @@ section ul{
 }
 
 section ul li{
-    list-style: none;
+    list-style: none;  
 }
 
 section ul div{
   margin-bottom: 5px;
+  box-shadow: 0px 0px 20px rgb(100, 100, 100);
+  border-radius: 5px;
+  transition: all 2s;  
+}
+
+section ul div :hover{
+    transform: scale(1.1);
 }
 
 section ul  div li a, div label a{
@@ -154,6 +171,7 @@ section ul  div li a, div label a{
 
 section ul div li img{
   width: 100%;
+  border-radius: 5px;
 }
 
 section ul label{
@@ -258,48 +276,47 @@ footer div.footer-redesSociales img{
         padding: 20px;
     }
 
-h4{
+    h4{
     font-family: sans-serif;
     font-size: 24px;
     text-align: center;
+    }
 
-}
-.formregister, .formlogin{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Roboto';
-    padding: 60px;
-}
+    .formregister, .formlogin{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: 'Roboto';
+        padding: 60px;
+    }
 
-.formregister label{
-width: 79%;
-padding: 20px 0px 10px 0px;
-font-weight: bold;
+    .formregister label{
+        width: 79%;
+        padding: 20px 0px 10px 0px;
+        font-weight: bold;
+    }
 
-}
+    .formlogin input, .formlogin button, .formregister input, .formregister button{
+       width: 80%;
+       border: none;
+       border-radius: 10px;
+       padding: 10px;
+       margin: 10px;
+    }
 
-.formlogin input, .formlogin button, .formregister input, .formregister button{
-    width: 80%;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 10px;
-}
+    .formregister div{
+       align-self: center;
+    }
 
-.formregister div{
-    align-self: center;
-}
+    .formregister div input, label{
+       align-self: center;
+       width: 4vw;
+    }
 
-.formregister div input, label{
-    align-self: center;
-    width: 4vw;
-
-}
-
-.formlogin button, .formregister button{
-    color: white;
-    background-color:#293771;
+    .formlogin button, .formregister button{
+        color: white;
+        background-color:#293771;
+    }
 }
 
 @media (min-width: 550px){
@@ -352,10 +369,13 @@ font-weight: bold;
         left: 70%;
     }
 
-    .slider ul {
+   /* .slider ul {
         height: 400px;
+    }*/
+    section{
+      margin-bottom: 50px;
     }
-    
+
     section ul{
         display: flex;
         flex-direction: row;
